[gd_scene load_steps=13 format=3 uid="uid://dm8frtb7vjpsp"]

[ext_resource type="PackedScene" uid="uid://bi5or4a50uaw4" path="res://enemy/Mob.tscn" id="1"]
[ext_resource type="PackedScene" path="res://player/Player.tscn" id="2"]
[ext_resource type="PackedScene" path="res://rankingPage/RankingPage.tscn" id="3"]
[ext_resource type="PackedScene" path="res://music/MusicController.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://bapqmfwrjvta1" path="res://firstPage/firstPage.tscn" id="5"]
[ext_resource type="FontFile" uid="uid://bgyv4uqm1jff5" path="res://fonts/Xolonium-Regular.ttf" id="6"]
[ext_resource type="Script" uid="uid://ce2mlunkvih2a" path="res://mainGame.gd" id="7"]
[ext_resource type="AudioStream" uid="uid://dluoyvb1p61g1" path="res://music/bgm.wav" id="8"]
[ext_resource type="AudioStream" uid="uid://bfr5cnj0v1l6i" path="res://music/bgm_boss.wav" id="9"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("6"), ExtResource("6")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/64/0/ascent = 0.0
cache/0/64/0/descent = 0.0
cache/0/64/0/underline_position = 0.0
cache/0/64/0/underline_thickness = 0.0
cache/0/64/0/scale = 1.0

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("6"), ExtResource("6")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/64/0/ascent = 0.0
cache/0/64/0/descent = 0.0
cache/0/64/0/underline_position = 0.0
cache/0/64/0/underline_thickness = 0.0
cache/0/64/0/scale = 1.0

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("6"), ExtResource("6")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/64/0/ascent = 0.0
cache/0/64/0/descent = 0.0
cache/0/64/0/underline_position = 0.0
cache/0/64/0/underline_thickness = 0.0
cache/0/64/0/scale = 1.0

[node name="MainGame" type="Node"]
script = ExtResource("7")
mob_scene = ExtResource("1")

[node name="MobTimer" type="Timer" parent="."]

[node name="Player" parent="." groups=["CanShoot"] instance=ExtResource("2")]
visible = false
position = Vector2(520, 1326)
scale = Vector2(0.982465, 0.981797)

[node name="FirstPage" parent="." instance=ExtResource("5")]

[node name="RankingPage" parent="." instance=ExtResource("3")]

[node name="PlayerStartPosition" type="Marker2D" parent="."]
position = Vector2(549, 1398)

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -511.5
offset_top = 31.0
offset_right = -181.5
offset_bottom = 109.0
theme_override_fonts/font = SubResource("1")
theme_override_font_sizes/font_size = 64
text = "SCORE: 0"

[node name="BgmMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8")

[node name="BossBgmMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9")

[node name="LifeLabel" type="Label" parent="."]
visible = false
offset_left = 32.0
offset_top = 108.0
offset_right = 286.0
offset_bottom = 186.0
theme_override_fonts/font = SubResource("2")
theme_override_font_sizes/font_size = 64
text = "LIFE:	   "

[node name="MusicController" parent="." instance=ExtResource("4")]
visible = false

[node name="MultiPlayerScoreLabel" type="Label" parent="."]
offset_left = 686.0
offset_top = 32.0
offset_right = 1062.0
offset_bottom = 125.0
theme_override_fonts/font = SubResource("3")
theme_override_font_sizes/font_size = 64

[node name="ScoreReportTimer" type="Timer" parent="."]

[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="getSupply" from="Player" to="MusicController" method="_on_Player_getSupply"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="hit" from="Player" to="RankingPage" method="game_over_entrypoint"]
[connection signal="startOver_play" from="FirstPage" to="MusicController" method="_on_FirstPage_startOver_play"]
[connection signal="startOver_stop" from="FirstPage" to="MusicController" method="_on_FirstPage_startOver_stop"]
[connection signal="start_game" from="FirstPage" to="." method="new_game"]
[connection signal="back_home" from="RankingPage" to="." method="back_home"]
[connection signal="restart_game" from="RankingPage" to="." method="new_game"]
[connection signal="successMusic_Play" from="RankingPage" to="MusicController" method="_on_RankingPage_successMusic_Play"]
[connection signal="successMusic_Stop" from="RankingPage" to="MusicController" method="_on_RankingPage_successMusic_Stop"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_BulletTimer_timeout"]
[connection signal="timeout" from="ScoreReportTimer" to="." method="_on_ScoreReportTimer_timeout"]
